--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "npm-run-all clean testcafe",
     "testcafe": "testcafe 'firefox:headless,chrome:headless --no-sandbox --disable-gpu' -S -s $npm_package_config_screenshots -p $npm_package_config_screenshot_path_pattern -r spec,xunit:$npm_package_config_reports/report.xml src/tests/index-test.js",
     "serventest": "start-server-and-test serve http-get://localhost:8080/dist/index.html testcafe",
-    "ci": "npm-run-all clean serventest"
+    "ci": "npm-run-all clean serventest",
+    "postinstall": "mkdirp dist build target"
   },
   "resolutions": {
     "**/@types/extract-text-webpack-plugin": "^2",
