--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "del-cli": "^1.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "npm-run-all": "^4.1.3",
