--- a/.stylelintrc
+++ b/.stylelintrc
@@ -13,6 +13,6 @@
       ]
     }],
     "block-no-empty": null,
-    "unit-whitelist": ["em", "rem", "%", "ch", "px", "vh", "vw"]
+    "unit-whitelist": ["em", "rem", "%", "ch", "px", "vh", "vw", "s"]
   }
 }
