chore: aligned path aliase

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,13 @@
 {
-    "path-autocomplete.pathMappings": {
-        "@components": "${folder}/src/js/components",
-        "@css": "${folder}/src/assets/css",
-        "@font": "${folder}/src/assets/fonts",
-        "@home": "${folder}",
-        "@html": "${folder}/src/html",
-        "@img": "${folder}/src/assets/img",
-        "@js": "${folder}/src/js",
-        "@svg": "${folder}/src/assets/svg",
-    }
+  "path-autocomplete.pathMappings": {
+    "~@components": "${folder}/src/js/components",
+    "~@css": "${folder}/src/assets/css",
+    "~@font": "${folder}/src/assets/fonts/*",
+    "~@home/*": "${folder}",
+    "~@html": "${folder}/src/html",
+    "~@icons": "${folder}/src/assets/icons",
+    "~@img": "${folder}/src/assets/img",
+    "~@js": "${folder}/src/js",
+    "~@svg": "${folder}/src/assets/svg"
+  }
 }
