--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,15 +7,17 @@
     "moduleResolution": "node",
     "strict": true,
     "target": "es6",
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
-      "@js/*": ["src/js/*"],
-      "@components/*": ["src/js/components/*"],
-      "@css/*": ["src/assets/css/*"],
-      "@home/*": ["./*"],
-      "@html/*": ["src/html/*"],
-      "@img/*": ["src/assets/img/*"],
-      "@svg/*": ["src/assets/svg/*"]
+      "~@components/*": ["src/js/components/*"],
+      "~@css/*": ["src/assets/css/*"],
+      "~@font/*": ["src/assets/fonts/*"],
+      "~@home/*": ["./*"],
+      "~@html/*": ["src/html/*"],
+      "~@icons/*": ["src/assets/icons/*"],
+      "~@img/*": ["src/assets/img/*"],
+      "~@js/*": ["src/js/*"],
+      "~@svg/*": ["src/assets/svg/*"]
     },
     "lib": ["es2016", "dom"],
     "sourceMap": true,
