started jquery integration

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,15 +9,15 @@
     "target": "es6",
     "baseUrl": "./",
     "paths": {
-      "~@components/*": ["src/js/components/*"],
-      "~@css/*": ["src/assets/css/*"],
-      "~@font/*": ["src/assets/fonts/*"],
-      "~@home/*": ["./*"],
-      "~@html/*": ["src/html/*"],
-      "~@icons/*": ["src/assets/icons/*"],
-      "~@img/*": ["src/assets/img/*"],
-      "~@js/*": ["src/js/*"],
-      "~@svg/*": ["src/assets/svg/*"]
+      "@components/*": ["src/js/components/*"],
+      "@css/*": ["src/assets/css/*"],
+      "@font/*": ["src/assets/fonts/*"],
+      "@home/*": ["./*"],
+      "@html/*": ["src/html/*"],
+      "@icons/*": ["src/assets/icons/*"],
+      "@img/*": ["src/assets/img/*"],
+      "@js/*": ["src/js/*"],
+      "@svg/*": ["src/assets/svg/*"]
     },
     "lib": ["es2016", "dom"],
     "sourceMap": true,
