--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/extract-text-webpack-plugin": "^2",
     "@types/html-webpack-plugin": "^2.30.1",
+    "@types/jquery": "^3.3.29",
     "@types/useragent": "^2.1.1",
     "@types/webpack": "^3",
     "@types/webpack-dev-server": "^2.9.4",
@@ -63,6 +64,7 @@
     "webpack-disk-plugin": "^0.0.2"
   },
   "dependencies": {
+    "jquery": "^3.3.1",
     "vue": "^2"
   }
 }
