feat: integrate jquery and waypoints min for sticky header

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -21,7 +21,8 @@
     },
     "lib": ["es2016", "dom"],
     "sourceMap": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "types": ["waypoints/jquery", "jquery"]
   },
   "exclude": ["dist", "node_modules", "target"],
   "include": ["src/js/**/*", "types/**/*"],
