--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/html-webpack-plugin": "^2.30.1",
     "@types/jquery": "^3.3.29",
     "@types/useragent": "^2.1.1",
+    "@types/waypoints": "^4.0.1",
     "@types/webpack": "^3",
     "@types/webpack-dev-server": "^2.9.4",
     "@types/webpack-env": "^1.13.6",
@@ -65,6 +66,7 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
-    "vue": "^2"
+    "vue": "^2",
+    "waypoints": "^4.0.1"
   }
 }
